--- a/week6-gui/p5-sun-moon-example/jsconfig.json
+++ b/week6-gui/p5-sun-moon-example/jsconfig.json
@@ -2,6 +2,6 @@
   "include": [
     "*.js",
     "libraries/*.js",
-    "c:\\Users\\Nicola\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.11\\p5types\\global.d.ts"
+    "/home/tom/.vscode-oss/extensions/samplavigne.p5-vscode-1.2.11/p5types/global.d.ts"
   ]
 }
